--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,12 @@ services:
     env_file:
       - .env
 
+  micro-blog-redis:
+    image: redis:8.2
+    command: redis-server --requirepass ${REDIS_PASSWORD}
+    ports:
+      - "${REDIS_PORT}:${REDIS_PORT}"
+
 volumes:
   micro-blog-db-volume:
 
