feat: apply redis cache to get post by id feature

--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,7 @@ DB_DATABASE=database
 DB_USER=user
 DB_PASSWORD=password
 
+REDIS_HOSTNAME=localhost
 REDIS_PASSWORD=password
 REDIS_PORT=6379
+REDIS_TTL=86400000
