--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,9 @@ springdoc.swagger-ui.path=/
 spring.datasource.url=jdbc:postgresql://${DB_HOSTNAME}:${DB_PORT}/${DB_DATABASE}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
+
+spring.data.cache.type=redis
+spring.data.redis.host=${REDIS_HOSTNAME}
+spring.data.redis.port=${REDIS_PORT}
+spring.data.redis.password=${REDIS_PASSWORD}
+spring.data.redis.time-to-live=${REDIS_TTL}
