build: add rabbitmq to docker compose

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,8 @@ REDIS_HOSTNAME=localhost
 REDIS_PASSWORD=password
 REDIS_PORT=6379
 REDIS_TTL=86400000
+
+RABBITMQ_PORT_1=5672
+RABBITMQ_PORT_2=15672
+RABBITMQ_USER=admin
+RABBITMQ_PASSWORD=password
