--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,16 @@ spring.data.redis.time-to-live=${REDIS_TTL}
 
 spring.rabbitmq.username=${RABBITMQ_USER}
 spring.rabbitmq.password=${RABBITMQ_PASSWORD}
+
+spring.mail.host=${MAIL_HOST}
+spring.mail.port=${MAIL_PORT}
+spring.mail.username=${MAIL_USER}
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.from=${MAIL_SENDER_EMAIL}
+spring.mail.default-encoding=UTF-8
+spring.mail.test-connection=false
+mail.from.name=Micro Blog
