feat: finish send email feature and connect to rabbitmq

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,9 @@ RABBITMQ_PORT_1=5672
 RABBITMQ_PORT_2=15672
 RABBITMQ_USER=admin
 RABBITMQ_PASSWORD=password
+
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USER=username
+MAIL_PASSWORD=password
+MAIL_SENDER_EMAIL=email
